--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "nodemon": "^2.0.12"
   },
   "dependencies": {
+    "cookie-session": "^1.4.0",
+    "cors": "^2.8.5",
     "env-cmd": "^10.1.0",
     "express": "^4.17.1",
     "mongodb": "^4.0.1",
