--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "server": "nodemon index.js",
     "client": "npm run start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "heroku-postbuild":"NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "author": "tuan",
   "license": "ISC",
@@ -26,6 +26,7 @@
     "express": "^4.17.1",
     "mongodb": "^4.0.1",
     "mongoose": "^5.13.3",
+    "nodemailer": "^6.6.3",
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0",
     "stripe": "^8.167.0"
